archive/build_logs/full_error.txt
warning: unused import: `crate::PoincareDiskPoint`
  --> src/ricci.rs:10:5
   |
10 | use crate::PoincareDiskPoint;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: field `registration_interval` is never read
  --> src/rendezvous.rs:91:5
   |
83 | pub struct RendezvousController {
   |            -------------------- field in this struct
...
91 |     registration_interval: u64,
   |     ^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(dead_code)]` (part of `#[warn(unused)]`) on by default

warning: `drfe_r` (lib) generated 2 warnings (run `cargo fix --lib -p drfe_r` to apply 1 suggestion)
    Checking drfe_r v0.1.0 (/mnt/c/dev/network test)
error[E0689]: can't call method `ln` on ambiguous numeric type `{float}`
   --> src/lib.rs:161:52
    |
161 |         let expected = ((1.0 + 0.5) / (1.0 - 0.5)).ln();
    |                                                    ^^

For more information about this error, try `rustc --explain E0689`.
error: could not compile `drfe_r` (lib test) due to 1 previous error
